Fixed error where header numbers larger than viewport lead to horizontal scroll on mobile.

--- a/app/scss/responsive.scss
+++ b/app/scss/responsive.scss
@@ -105,6 +105,8 @@ $content-page-v-margin: 70vh;
         font-size: 22 * $normal-font-size;
         letter-spacing: -0.1ch;
         left: -0.1ch;
+        max-width: 100vw;
+        overflow-x: hidden;
       }
     }
   }
